//? ===================================== ACCOUNTS SCHEMA ===================================== ?//

model Account {
  id             String             @id @default(cuid())
  access         access             @default(User)
  username       String             @unique
  email          String             @unique
  firstName      String
  lastName       String
  middleName     String?
  gender         gender
  client_profile client_profile     @default(Other)
  cellphone_no   String?
  telephone_no   String?
  occupation     String?
  position       String?
  institution    String?
  address        String?
  picture        Bytes?
  mimeType       String?
  commodity      AccountCommodity[]
  password       String
  createdAt      DateTime           @default(now())
  updatedAt      DateTime           @updatedAt

  // Relations
  seminars          SeminarParticipant[]
  itemTransactions  ItemTransaction[]
  adminTransactions ItemTransaction[]    @relation("AdminTransactions")
  seminarsCreated   Seminar[]            @relation("SeminarsCreated")

  @@map("accounts")
}

model Commodity {
  id          String             @id @default(cuid())
  name        String             @unique
  icon        String?
  description String?
  accounts    AccountCommodity[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("commodities")
}

//? ====================================== RELATIONSHIPS ====================================== ?//

model AccountCommodity {
  id           String   @id @default(cuid())
  account_id   String
  commodity_id String
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  // Relations
  commodity Commodity @relation(fields: [commodity_id], references: [id])
  account   Account   @relation(fields: [account_id], references: [id])

  @@unique([account_id, commodity_id])
  @@map("accounts_commodities")
}

//? ========================================== ENUMS ========================================== ?//

enum client_profile {
  Fishfolk                          @map("Fishfolk")
  Rural_Based_Org                   @map("Rural Based Org")
  Student                           @map("Student")
  Agricultural_Fisheries_Technician @map("Agricultural/Fisheries Technician")
  Youth                             @map("Youth")
  Women                             @map("Women")
  Govt_Employee                     @map("Govt Employee")
  PWD                               @map("PWD")
  Indigenous_People                 @map("Indigenous People")
  Other                             @map("Other")
}

enum access {
  Admin
  User
  Super_Admin @map("Super Admin")
}

enum gender {
  Male
  Female
  Other
}
